[package]
name = "waka"
description = "Client for WakaTime API, a work in progress"
authors = ["Markus Mayer"]
version = "0.1.0"
edition = "2021"
readme = "README.md"
license-file = "LICENSE.md"
repository = "https://github.com/sunsided/waka-rs"

[dependencies]
base64 = "0.21.2"
query-string-builder = "0.4.0"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.167", features = ["derive"] }
serde_json = "1.0.100"

[dev-dependencies]
dotenvy = "0.15.7"
tokio = { version = "1.29.1", features = ["full"] }
